Optimalized Raycaster Gouald CP